style: :lipstick: Quick Fixed of dark mode
Fixed dark mode color, needs to be improve in color scheme custom variables

--- a/src/styles/About.module.css
+++ b/src/styles/About.module.css
@@ -13,13 +13,13 @@ section.about {
     align-items: center;
 
     h2.h2 {
-      color: #18181b;
+      /* color: #18181b; */
       font-size: 2.8rem;
       text-align: center;
     }
 
     span {
-      color: #18181b;
+      /* color: #18181b; */
       font-size: 1.5rem;
       text-align: center;
     }
