--- a/src/styles/BackToTop.module.css
+++ b/src/styles/BackToTop.module.css
@@ -33,7 +33,7 @@ a.backToTop {
   right: 2%;
   transform: translate(-50%);
   /* background-color: var(--accent-color); */
-  color: var(--details);
+  color: light-dark(var(--details), #ffffff);
   width: 3.5rem;
   height: 3.5rem;
   border-radius: 50%;
@@ -43,7 +43,7 @@ a.backToTop {
   justify-content: center;
   /* font-size: 0.6rem; */
   border: 1px solid #eaeaea;
-  background-color: rgba(250, 250, 250, 0.8);
+  background-color: light-dark(rgba(250, 250, 250, 0.8), rgba(0, 0, 0, 0.8));
   backdrop-filter: blur(8px);
   cursor: pointer !important;
 
