--- a/src/styles/Contact.module.css
+++ b/src/styles/Contact.module.css
@@ -14,13 +14,13 @@ section.contact {
     align-items: center;
 
     h2.contactHeading {
-      color: #18181b;
+      /* color: #18181b; */
       font-size: 2.8rem;
       text-align: center;
     }
 
     span {
-      color: #18181b;
+      /* color: #18181b; */
       font-size: 1.5rem;
       text-align: center;
     }
@@ -51,7 +51,7 @@ section.contact {
         {
         font-size: 1.2rem;
         font-weight: 500;
-        color: #18181b;
+        /* color: #18181b; */
       }
 
       input,
