--- a/src/styles/Footer.module.css
+++ b/src/styles/Footer.module.css
@@ -4,13 +4,21 @@ footer.footer {
   justify-content: space-between;
   align-items: center;
   border-top: 1px solid #eaeaea;
-  background-color: rgba(250, 250, 250, 0.8);
+  background-color: light-dark(rgba(250, 250, 250, 0.8), rgba(0, 0, 0, 0.8));
   padding: 1rem 2rem;
   /* background-color: #121212;
   color: #ffffff;
   text-align: center;
   padding: 1.5rem 1rem;
   font-size: 0.875rem; */
+
+  hr.divider {
+    /* flex-grow: 1;
+    border: none;
+    border-top: 1px solid #eaeaea;
+    margin: 0 1rem; */
+    display: none;
+  }
 
   div.footerLinks {
     display: flex;
@@ -20,7 +28,7 @@ footer.footer {
     gap: 1rem;
 
     a {
-      color: var(--details);
+      color: light-dark(var(--details), #ffffff);
       text-decoration: none;
 
       .icon {
@@ -34,7 +42,7 @@ footer.footer {
       @media (hover: hover) and (pointer: fine) {
         &:hover {
           /* transform: scale(1.1); */
-          color: #18181B;
+          color: light-dark(#18181B, #ffffff);
         }
       }
     }
@@ -64,6 +72,7 @@ footer.footer a:hover {
     } */
 
     hr.divider {
+      display: block;
       width: 100%;
       border: none;
       border-top: 1px solid #eaeaea;
