--- a/src/styles/Navbar.module.css
+++ b/src/styles/Navbar.module.css
@@ -16,7 +16,7 @@ nav.navbarScrolled {
 }
 
 nav.navbarScrolled {
-  background-color: rgba(250, 250, 250, 0.8);
+  background-color: light-dark(rgba(250, 250, 250, 0.8), rgba(0, 0, 0, 0.8));
   backdrop-filter: blur(8px);
   transition: all 0.3s ease-in-out;
 }
@@ -81,9 +81,9 @@ a.activeLink:not(ul li.navbarItem:last-child a) {
 
 /* selecciona el ultimo elemento de la lista */
 ul li.navbarItem:last-child a {
-  color: #fff;
+  color: light-dark(#fff, #000);
   font-weight: bold;
-  background-color: #18181B;
+  background-color: light-dark(#18181B, #f0f0f0);
   padding: 0.5rem 1rem;
   border-radius: 0.5rem;
 }
