--- a/src/styles/Projects.module.css
+++ b/src/styles/Projects.module.css
@@ -15,13 +15,13 @@ section {
     align-items: center;
 
     h2.heading {
-      color: #18181b;
+      /* color: #18181b; */
       font-size: 2.8rem;
       text-align: center;
     }
 
     span {
-      color: #18181b;
+      /* color: #18181b; */
       font-size: 1.5rem;
       text-align: center;
     }
@@ -62,7 +62,7 @@ section {
     }
 
     button.activeButton {
-      color: #18181b;
+      /* color: #18181b; */
       font-weight: 500;
       /* background-color: #F5F5F5; */
       height: 100%;
